--- a/Javascript/생성자 함수.md
+++ b/Javascript/생성자 함수.md
@@ -1,1 +1,54 @@
-# Test
+# 생성자 함수
+- Yalco 자바스크립트 강의를 보며 알게된 것들을 기록
+
+## 생성자 함수는 대문자로 시작한다
+```Javascript
+// 생성자 정의
+function EnochStudy(name, no){
+  this.name = name;
+  this.no = no;
+  this.introduce = function(){
+    return `${this.name}`과목 ${this.no}번째 공부입니다.;
+  }
+}
+
+// 사용하는 법
+const sub1 = new EnochStudy('Javascript', 1);
+console.log(sub1);
+```
+- `new`를 붙이는가의 여부에 따라 호출되는 원리가 다르다.
+- `new`를 붙이지 않으면 생성자 함수로는 작동되지 않는다. 
+- 생성자 함수에는 메소드가 정의될 수 없다.
+
+## 프로토타입
+클래스가 자바의 객체지향 중심이라면 프로토타입은 자바스크립트의 객체지향의 중심 
+- 프로토 타입을 통한 생성자 기능 추가
+```Javascript
+EnochStudy.prototype.introJavascript = function(){
+  return `Welcome to ${this.name} Study!`;
+}
+```
+
+## 생성자 vs 객체 반환 함수 vs 객체 리터럴
+- 객체 리터럴은 독립적인 가게 자체를 차린 거고, 객체 반환 함수는 사후 관리를 책임져주지는 않지만
+  생성자는 본사가 사후 관리까지 계속해서 책임져준다.
+
+## 생성자에 프로토타입을 쓰지 않고 프로퍼티를 추가한다면?
+- 본사 자체에 기능을 추가하는 것, 생성자 객체에 기능이 추가 되는 것은 아님
+
+## `new`를 붙이지 않는 실수를 방지하려면?
+- 생성자 내에 `new`를 붙이지 않았을 때를 대비한 재귀함수를 넣는다.
+```Javascript
+// 생성자 정의
+function EnochStudy(name, no){
+  this.name = name;
+  this.no = no;
+  this.introduce = function(){
+    return `${this.name}`과목 ${this.no}번째 공부입니다.;
+  }
+
+  // 재귀함수 추가
+  if(!new.target) {
+    return new EnochStudy(name, no);
+  }
+}
